Fix grid behavior with flex-wrap

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -9,6 +9,7 @@ button{
 
 .sketch-container {
   display: flex;
+  flex-wrap: wrap;
   margin: auto;
   width: 80vh;
   height: 80vh;
