--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,17 @@ button {
 
 .sketch-container {
   display: flex;
+  flex-wrap: wrap;
   margin: auto;
   width: 80vh;
   height: 80vh;
   border: 2px solid black;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }/*# sourceMappingURL=style.css.map */
